--- a/app/globals.css
+++ b/app/globals.css
@@ -104,3 +104,10 @@
     @apply font-medium;
   }
 }
+
+/* .mdx-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  width: 100%;
+} */
